# stlsat

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
resources/benchmarks/random_dl/: b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j10_1.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j10_2.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j10_3.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j10_4.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j10_5.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j5_1.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j5_2.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j5_3.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j5_4.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_33_j5_5.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j10_1.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j10_2.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j10_3.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j10_4.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j10_5.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j5_1.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j5_2.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j5_3.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j5_4.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_5_j5_5.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_75_j10_1.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_75_j10_2.stl  b0_r5_c10_l10000_i1000_ps0_05_pt0_75_j10_3.stl  (+1978 more)
resources/results/: stl_benchmarks_results.csv
scripts/: make_plots.sh  parallel_sat.sh  requirements.txt  run_bench.py  run_mltl_comparison.sh  run_random_stl_comparison.sh  stl_benchmarks.py
src/: lib.rs  main.rs  rb.rs
src/formula/: mod.rs  transform.rs
src/sat/: config.rs  mod.rs
(+46 files in other folders)
