[package]
name = "stlsat"
version = "0.1.0"
edition = "2024"
default-run = "stlsat"

[lib]
name = "stlsat"
path = "src/lib.rs"

[[bin]]
name = "stlsat"
path = "src/main.rs"

[[bin]]
name = "scanner"
path = "src/scanner.rs"

[[bin]]
name = "rb"
path = "src/rb.rs"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dot_graph = "0.2.3"
log = "0.4.29"
nom = "8.0.0"
num-rational = "0.4.2"
rand = "0.9.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
z3 = { version = "0.19.2" }

[dev-dependencies]
rstest = "0.26.1"
